--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,11 @@
 alembic==1.11.2
 APScheduler==3.10.1
+Babel==2.12.1
 blinker==1.6.2
 click==8.1.6
 Flask==2.3.2
+flask-babel==3.1.0
+Flask-Login==0.6.2
 Flask-Migrate==4.0.4
 Flask-Reuploaded==1.3.0
 Flask-SQLAlchemy==3.0.5
