--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ alembic==1.11.2
 APScheduler==3.10.1
 blinker==1.6.2
 click==8.1.6
+et-xmlfile==1.1.0
 Flask==2.3.2
 Flask-Login==0.6.2
 Flask-Migrate==4.0.4
@@ -12,9 +13,14 @@ itsdangerous==2.1.2
 Jinja2==3.1.2
 Mako==1.2.4
 MarkupSafe==2.1.3
+numpy==1.25.2
+openpyxl==3.1.2
+pandas==2.1.0
+python-dateutil==2.8.2
 pytz==2023.3
 six==1.16.0
 SQLAlchemy==2.0.19
 typing_extensions==4.7.1
+tzdata==2023.3
 tzlocal==5.0.1
 Werkzeug==2.3.6
